fix issue in form with nowrap property

--- a/src/components/Form/Form.css
+++ b/src/components/Form/Form.css
@@ -98,8 +98,16 @@
     display: flex;
     flex-direction: row;
     align-items: center;
+    flex-wrap: nowrap;
+
+    width: min-content;
+    white-space: nowrap;
 
     cursor: pointer;
+
+    & > span {
+      white-space: initial;
+    }
   }
 
   & h2:hover {
